Inserting Data Samples

--- a/ClosedXMLSample/ClosedXMLSample.csproj
+++ b/ClosedXMLSample/ClosedXMLSample.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InsertingController.cs" />
     <Compile Include="Controllers\MiscController.cs" />
+    <Compile Include="Controllers\RangesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -154,6 +155,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Inserting\" />
+    <Folder Include="Views\Ranges\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
